[gd_scene load_steps=13 format=3 uid="uid://cebht7rc3uubs"]

[ext_resource type="Script" path="res://Towers/FireTower/FireTower.gd" id="1_lcpeq"]
[ext_resource type="PackedScene" uid="uid://byhxhqe12khwj" path="res://Towers/FireTower/Fire1Mesh.tscn" id="2_s0vmi"]
[ext_resource type="PackedScene" uid="uid://bw5auwhsqwiue" path="res://Towers/FireTower/Fire2Mesh.tscn" id="3_8py4b"]
[ext_resource type="PackedScene" uid="uid://drd43xqpoik5o" path="res://Towers/FireTower/Fire3Mesh.tscn" id="4_hlrdn"]
[ext_resource type="PackedScene" uid="uid://dxkqmrjpotyqw" path="res://Towers/FireTower/Fire4Mesh.tscn" id="5_2u7n1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s1ad3"]
albedo_color = Color(1, 0, 0.0156863, 1)

[sub_resource type="BoxMesh" id="BoxMesh_yotpe"]
material = SubResource("StandardMaterial3D_s1ad3")
size = Vector3(3, 7, 3)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_xpq21"]
height = 7.0
radius = 2.5

[sub_resource type="CylinderShape3D" id="CylinderShape3D_2p8ii"]
height = 30.0
radius = 30.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0p0an"]
blend_mode = 1
shading_mode = 0
albedo_color = Color(0, 0.713726, 0.835294, 1)

[sub_resource type="TorusMesh" id="TorusMesh_vyx8i"]
material = SubResource("StandardMaterial3D_0p0an")
inner_radius = 29.0
outer_radius = 30.0

[sub_resource type="TorusMesh" id="TorusMesh_203y3"]
inner_radius = 2.5
outer_radius = 3.0

[node name="FireTower" type="Area3D" groups=["tower"]]
script = ExtResource("1_lcpeq")

[node name="Fire1Mesh" parent="." instance=ExtResource("2_s0vmi")]

[node name="Fire2Mesh" parent="." instance=ExtResource("3_8py4b")]
visible = false

[node name="Fire3Mesh" parent="." instance=ExtResource("4_hlrdn")]
visible = false

[node name="Fire4Mesh" parent="." instance=ExtResource("5_2u7n1")]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.33012, 0)
visible = false
mesh = SubResource("BoxMesh_yotpe")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.33012, 0)
shape = SubResource("CylinderShape3D_xpq21")

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.94758, 0)

[node name="AttackRange" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackRange"]
shape = SubResource("CylinderShape3D_2p8ii")

[node name="AreaMesh" type="MeshInstance3D" parent="AttackRange"]
visible = false
mesh = SubResource("TorusMesh_vyx8i")

[node name="Timer" type="Timer" parent="."]

[node name="Highlight" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("TorusMesh_203y3")

[connection signal="area_entered" from="AttackRange" to="." method="_on_attackrange_area_entered"]
[connection signal="area_exited" from="AttackRange" to="." method="_on_attackrange_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
